--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.4",
     "portfolio": "file:",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
