--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "next": "14.0.4",
     "portfolio": "file:",
+    "primeflex": "^3.3.1",
+    "primereact": "^10.2.1",
     "react": "^18",
-    "react-dom": "^18",
-    "use-sound": "^4.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
