--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "primeflex": "^3.3.1",
     "primereact": "^10.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "@types/node": "^20",
