--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.0.4",
     "portfolio": "file:",
     "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primereact": "^10.2.1",
     "react": "^18",
     "react-dom": "^18",
